--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,8 +21,17 @@
         android:layout_marginEnd="20dp"
         android:backgroundTint="#85044A75"
         android:onClick="loginToRest"
-        android:text="@string/login_label"
         android:textColor="#FFFFFF"
         tools:text="CONNECT" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="70dp"
+        android:layout_height="73dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="false"
+        android:layout_marginTop="200dp"
+        android:layout_marginBottom="200dp"
+        app:srcCompat="@drawable/twitter_bird" />
 
 </RelativeLayout>
